# large-android

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  local.properties  settings.gradle  shared.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jomof/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/jomof/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/jomof/myapplication/: ExampleUnitTest.java
common/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
myapplication11/: build.gradle
myapplication12/: proguard-rules.pro
tools/: memlister
