cmake_minimum_required(VERSION 3.6)
add_subdirectory(libpng)
##add_subdirectory(protobuf/cmake)
##add_subdirectory(json)
#add_subdirectory(flatbuffers)
##add_subdirectory(tesseract)
#add_subdirectory(lua)
#add_subdirectory(re2)
##add_subdirectory(freetype)
#add_subdirectory(boringssl)
add_subdirectory(sdl2)
##add_subdirectory(curl)
